--- a/examples/smoothquant_opt_demo.ipynb
+++ b/examples/smoothquant_opt_demo.ipynb
@@ -32,8 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
